--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 debug=true
 
